<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/el_tiempo"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localidades"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/bBilbao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/bilbo_bilbao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/bVitoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/vitoria_gasteiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bBilbao" />

    <Button
        android:id="@+id/bDonosti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/donostia_san_sebastian"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bVitoria" />


    <TextView
        android:id="@+id/tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo_en"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bDonosti" />


    <TextView
        android:id="@+id/ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="v"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tiempo"
        app:layout_constraintTop_toBottomOf="@+id/bDonosti" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciudad"
        android:orientation="vertical"
        android:background="@color/colorPrimary">


        <TextView
            android:id="@+id/dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia"/>

        <TextView
            android:id="@+id/TempMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatura_maxima"/>

        <TextView
            android:id="@+id/TempMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatura_minima"/>
        <TextView
            android:id="@+id/Cielo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_del_cielo"/>


    </LinearLayout>

    <Button
        android:id="@+id/bSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>