<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListadoLibros">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/radioButtonLeido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leidos" />

        <RadioButton
            android:id="@+id/radioButtonNoLeido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_leidos" />

        <RadioButton
            android:id="@+id/radioButtonTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todos_los_libros" />
    </RadioGroup>



    <ListView
        android:id="@+id/listViewLibros"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="150dp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="49dp">

    </ListView>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewLibros" />

</androidx.constraintlayout.widget.ConstraintLayout>