<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscarLibro">


    <TextView
        android:id="@+id/BuscarL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BuscarL"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewLibros"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="150dp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="49dp"
        android:background="@color/colorPrimary"
        android:visibility="invisible">

    </ListView>

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marca"
        android:textSize="14dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BuscarL" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto">


        <RadioButton
            android:id="@+id/radioButtonTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Titulo" />

        <RadioButton
            android:id="@+id/radioButtonAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Autor" />

        <RadioButton
            android:id="@+id/radioButtonEditorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Editorial" />
    </RadioGroup>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


    <EditText
        android:id="@+id/editTextBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitulo"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/textViewTitulo"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <Button
        android:id="@+id/btnBuscarL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBuscar" />



</androidx.constraintlayout.widget.ConstraintLayout>