<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionLibro">


    <TextView
        android:id="@+id/Informacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Informacion"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="titulo"
        android:layout_marginTop="15dp"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Informacion" />


    <TextView
        android:id="@+id/Autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Autor"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/ISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ISBN"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Autor" />

    <TextView
        android:id="@+id/Editorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="editorial"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ISBN" />

    <TextView
        android:id="@+id/paginas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="paginas"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Editorial" />


    <TextView
        android:id="@+id/leido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="Libro leido"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/Editorial"
        app:layout_constraintTop_toBottomOf="@+id/Editorial" />


    <Button
        android:id="@+id/buttonBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paginas" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cancelar"
        app:layout_constraintStart_toEndOf="@+id/buttonBorrar"
        app:layout_constraintTop_toBottomOf="@+id/paginas" />





</androidx.constraintlayout.widget.ConstraintLayout>